[package]
name = "safe_paillier_rust"
version = "0.1.3"
edition = "2021"
authors = ["Debrup Chatterjee <debrupc3@gmail.com>"]
description = "An implementation of the Paillier cryptosystem with homomorphic properties, leveraging Rust's type system and safety guarantees."
license = "MIT"
repository = "https://github.com/crypto-keys-unlocked/safe_paillier_rust/"
documentation = "https://docs.rs/safe_paillier_rust"
keywords = ["cryptography", "paillier", "homomorphic", "encryption", "security"]
categories = ["cryptography", "algorithms"]

[dependencies]
num-bigint = "0.4"
num-prime = "0.4.3"
rand = "0.8"
num-traits = "0.2"
num-modular = "0.6.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "paillier_bench"
harness = false
